[profile.release]
debug = true

[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.6"
anyhow = "1.0.75"
chrono = "0.4.31"
circular-buffer = "0.1.6"
curl = "0.4.44"
itertools = { version = "0.12.0", features = [] }
nalgebra = "0.32.3"
ndarray = "0.15.6"
num-integer = "0.1.45"
petgraph = "0.6.4"
priority-queue = "1.3.2"
